amaroK Changelog
==================
(c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.


  * add: a stream browser, can only DnD, separate window, not great yet
  * fix: finally fixed the ancient "annoying-noise-when-pressing-pause" bug
  * fix: should keep track of currently played item no matter what you do to the playlist,
         has a nice side effect of remembering the last played song, too. <berkus>
  * fix: write undo for Shuffle <berkus>
  * fix: the expandbutton doesn't fire events when it has had its stack expanded
         (behaviour a-la Winamp Classic) <berkus>
  * fix: crash when pressing right mouse button while stream is connecting
  * add: show bitrate for streams with icecast support
  * fix: save stream names as #EXTINF in m3u files
  * add: bug report dialog
  * add: proxy for decoding shoutcast/icecast metadata (experimental!)
  * add: amaroK now in bugs.kde.org
  * add: configurable delay after each track.  currently 0-10 seconds in 1 sec increments
         but could easily be made to use finder increments if ppl want - piggz (www.piggz.co.uk)
  * add: viswidgetv2.  it seems a lot smoother on my machine.
         its quite easy to tweak the dynamics is needed.  is accessible the same as the other
         widgets, just click until it appears (though it looks the same as the original widget
         it just acts differently) - piggz (www.piggz.co.uk)
  * add: combo with history and completion for dir/file chooser
  * add: in configure.in.in for checking the version of TagLib, if compiled from CVS, if not, 
         then show, that it uses bundled version of TagLib - Stormy
  * fix: font dialog sizing issues
  * add: resume playback option. Using this means your track starts up again where you left it
         last time you quit amaroK. Excellent feature for us developers :-)

VERSION 0.7.0:
  * fix: collection of fixes related to showing/raising/hiding the playlist
    when showing/raising/hiding the mainWidget